...
        android:layout_marginTop="12dp"
        android:hint="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessnumber" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="284dp"
        android:onClick="updateContact"
        android:text="Update Data"
...
